tests/baselines/reference/nativeToBoxedTypes.errors.txt
tests/cases/compiler/nativeToBoxedTypes.ts(3,1): error TS2322: Type 'Number' is not assignable to type '数字'.
  '数字' is a primitive, but 'Number' is a wrapper object. Prefer using '数字' when possible.
tests/cases/compiler/nativeToBoxedTypes.ts(7,1): error TS2322: Type 'String' is not assignable to type '文字'.
  '文字' is a primitive, but 'String' is a wrapper object. Prefer using '文字' when possible.
tests/cases/compiler/nativeToBoxedTypes.ts(11,1): error TS2322: Type 'Boolean' is not assignable to type '真假'.
  '真假' is a primitive, but 'Boolean' is a wrapper object. Prefer using '真假' when possible.
tests/cases/compiler/nativeToBoxedTypes.ts(14,10): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/compiler/nativeToBoxedTypes.ts (4 errors) ====
    var N = new Number();
    var n = 100;
    n = N;
    ~
!!! error TS2322: Type 'Number' is not assignable to type '数字'.
!!! error TS2322:   '数字' is a primitive, but 'Number' is a wrapper object. Prefer using '数字' when possible.
    
    var S = new String();
    var s = "foge";
    s = S;
    ~
!!! error TS2322: Type 'String' is not assignable to type '文字'.
!!! error TS2322:   '文字' is a primitive, but 'String' is a wrapper object. Prefer using '文字' when possible.
    
    var B = new Boolean();
    var b = true;
    b = B;
    ~
!!! error TS2322: Type 'Boolean' is not assignable to type '真假'.
!!! error TS2322:   '真假' is a primitive, but 'Boolean' is a wrapper object. Prefer using '真假' when possible.
    
    var sym: symbol; 
    var Sym: Symbol;
             ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    sym = Sym;